<resources>
    <string name="app_name">Projeto A</string>
    <string name="home">Home</string>
    <string name="perfil">Perfil</string>
    <string name="notifica_es">Notificações</string>
    <string name="menu">Menu</string>
    <string name="exerc_cios_aer_bicos"><![CDATA[Exercícios Aeróbicos >]]></string>
    <string name="nutricionistas_recomendados"><![CDATA[Nutricionistas Recomendados >]]></string>
    <string name="trainers_recomendados"><![CDATA[Trainers Recomendados >]]></string>
    <string name="exerc_cios_superiores"><![CDATA[Exercícios Superiores >]]></string>
    <string name="exerc_cios_inferiores"><![CDATA[Exercícios Inferiores >]]></string>
    <string name="monte_sua_dieta"><![CDATA[Monte Sua Dieta >]]></string>
    <string name="ainda_n_o_sei"><![CDATA[Ainda não sei >]]></string>
    <string name="busca">busca</string>
    <string name="chat">chat</string>
    <string name="aba_para_lembretes_do_us_ario">Aba para lembretes do usúario!!</string>
    <string name="lana">lana</string>
    <string name="megan">megan</string>
    <string name="dog1">dog1</string>
    <string name="dog2">dog2</string>
    <string name="dog3">dog3</string>
    <string name="dog4">dog4</string>
    <string name="angelina">angelina</string>
    <string name="yvonne">yvonne</string>
    <string name="nicole">nicole</string>
    <string name="mia">mia</string>
    <string name="kid">kid</string>
    <string name="birulinho">birulinho</string>
    <string name="moro">moro</string>
    <string name="nine">nine</string>
    <string name="xandao">xandao</string>
    <string name="saitama">saitama</string>
</resources>