<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_navigation_menu"
        tools:ignore="VisualLintBottomNav">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <ScrollView
        android:id="@+id/ScrollViewFeed"
        android:layout_width="263dp"
        android:layout_height="332dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/dog1"
                android:src="@drawable/d3"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/dog2"
                android:src="@drawable/d4" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/dog3"
                android:src="@drawable/d5"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/dog4"
                android:src="@drawable/d6"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/aerobicosButton"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:text="@string/exerc_cios_aer_bicos"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503"
        tools:ignore="TextSizeCheck" />

    <HorizontalScrollView
        android:id="@+id/ScrollViewNutri"
        android:layout_width="379dp"
        android:layout_height="57dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:src="@drawable/lana" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@drawable/megan" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@drawable/angelina"/>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@drawable/yvonne"/>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@drawable/nicole"/>

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@drawable/mia"/>


        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/ScrollViewTrainer"
        android:layout_width="379dp"
        android:layout_height="57dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@drawable/kid" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@drawable/birulinho"/>

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@drawable/moro"/>

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@drawable/nine"/>

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@drawable/xandao"/>

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@drawable/saitama"/>

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/nutriTextView"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/nutricionistas_recomendados"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/trainerTextView"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/trainers_recomendados"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/superioresButton"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:text="@string/exerc_cios_superiores"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599" />

    <Button
        android:id="@+id/inferioresButton"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:text="@string/exerc_cios_inferiores"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.697" />

    <Button
        android:id="@+id/dietaButton"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:text="@string/monte_sua_dieta"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <Button
        android:id="@+id/slaButton"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:text="@string/ainda_n_o_sei"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.885"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/abaTextView"
        android:layout_width="209dp"
        android:layout_height="71dp"
        android:text="@string/aba_para_lembretes_do_us_ario"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/buscaButton"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:drawableBottom="@drawable/ic_person_search"
        android:text="@string/busca"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.754"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/chatButton"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:drawableBottom="@drawable/ic_chat"
        android:text="@string/chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>